responsive horizontal scroll fix + sm bootstrap screen

--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     overflow-x: hidden;
-  }
- body {
-    width:100%;
-  }
+}
+
+body {
+    width: 100%;
+}
 
 /* General */
 
@@ -556,6 +558,19 @@ footer p {
 
 /* Media queries */
 
+@media screen and (max-width: 576px) {
+
+    .linkIconPosition {
+        width: 40%;
+    }
+
+    .mainBar {
+        height: 100%;
+    }
+}
+
+
+
 @media screen and (max-width: 768px) {
     .titleText {
         font-size: 40px;
@@ -657,7 +672,7 @@ footer p {
 
 @media screen and (max-width: 992px) {
     .titleText {
-        font-size: 40px;
+        font-size: 35px;
     }
 
     #blob7 {
@@ -703,6 +718,7 @@ footer p {
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 10px;
         padding: 5px;
         width: 250px;
         height: 80px;
@@ -757,7 +773,7 @@ footer p {
 
 @media screen and (max-width: 1200px) {
     .mainBar {
-        height: 60vh;
+        height: 100%;
     }
 
     .buttonSkills {
@@ -779,7 +795,4 @@ footer p {
         height: 50vh;
     }
 
-    .mainBar{
-        height: 60vh;
-    }
 }
